@startuml
scale max 3000*3000
hide empty members
hide empty methods

skinparam titleFontSize 32
skinparam titleFontColor black
title
UML diagram: TodoList Model
endtitle

class Task {
    - id: int
    - description: String
    - importance: Importance
    - creationDate: LocalDate
    - dueDate: LocalDate
    - completed: boolean
}

enum Importance {
    HIGH
    MEDIUM
    LOW
}

class TaskManager {
    - tasks: Set<Task>
    ==
    + getTasks(): Collection<Task>
    .. synchronized ..
    + addOrEditTask(task: Task): void
    + removeTask(task: Task): boolean 
}

Importance .left.o Task
TaskManager o.left. Task

'========================================
' Liens avec les interfaces : héritage
' http://ecrucru.free.fr/?page=uml

' ..|> Implementation
' --|> Héritage

' --o Aggrégation
' --* Composition
' --> Association
' ..> Dépendence

@enduml
